                    1.3.1 Release Notes
                  ------------------------

This file contains a description of the major changes to ProFTPD for the
1.3.1 release cycle, from the 1.3.1rc1 release to the 1.3.1-stable release.
More information on these changes can be found in the NEWS and ChangeLog
files.

1.3.1rc1
---------
  + Command changes:

      MDTM now always returns times in GTM, regardless of TimesGMT setting

  + New configuration directives:

      DisplayChdir

      DisplayFileTransfer
        (only works for successful transfers)

      QuotaOptions
        ScanOnLogin

      SQLOptions
        noDisconnectOnError
        useNormalizedGroupSchema

      TLSCryptoDevice

      Trace

      TraceLog

      UseLastlog

      UseUTF8

  + Enhanced configuration directives:

      CreateHome uid gid

      LogFormat %S, %{version}

      SQLConnectInfo MySQL Unix domain socket

      TLSRequired auth, auth+data

  + New configure options:

      --enable-devel=stacktrace
        This configure option enables logging of the call stack trace
        whenever a SIGSEGV signal is received.  Very very useful for
        tracking down the cause of a segfault.

      --with-lastlog[=PATH]

        Automatic determination
        /var/adm/lastlog
 
  + New modules:

      mod_ban

      mod_quotatab_radius

      mod_wrap2, mod_wrap2_file, mod_wrap2_sql

  + New documentation:

      doc/howto/CreateHome.html

  + Module enhancements:

     mod_ctrls_admin
       New 'scoreboard' control action, for scrubbing the ScoreboardFile
       on demand.

  + Deprecated configuration directives:

      DisplayFirstChdir

      HiddenStor
        Use HiddenStores

      SQLHomedirOnDemand

Last Updated: $Date: 2006-09-07 16:04:10 $