@@ -1278,6 +1278,12 @@ if test x"$enable_ctrls" = xyes; then
   ac_build_static_modules="$ac_build_static_modules modules/mod_ctrls.o"
 fi
 
+dnl NLS/LANG support
+if test x"$enable_nls" = xyes; then
+  ac_static_modules="$ac_static_modules mod_lang.o"
+  ac_build_static_modules="$ac_build_static_modules modules/mod_lang.o"
+fi
+
 dnl IPv4/IPv6-related checks
 AC_CHECK_MEMBER(struct sockaddr_in.sin_len,
   [AC_DEFINE(SIN_LEN)],,
